@@ -1,3 +1,10 @@
+2018-12-25  Karl Berry  <karl@tug.org>
+
+	* capout.pl (write_issue): output lists links on every toc page.
+
+	* capaccum-util.pl (lists_entry_trailer): omit subtitles for any
+		"Reviews".
+
 2018-12-25  Karl Berry  <karl@freefriends.org>
 
 	* lists-unifications.txt (LaTeX Project Team): also unify "the".
